build_log2.txt
[92m============================================[0m
[92m   3sx - Incremental Recompile              [0m
[92m============================================[0m

[92m[V] Using MSYS2 at: "C:\msys64"[0m

[93m[*] Incremental build in: D:\3sxtra\[0m

[92m[*] Starting MSYS2 MinGW64 incremental build...[0m

[1/10] Building C object CMakeFiles/3sx.dir/src/port/sdl/renderer/sdl_game_renderer_sdl_sw.c.obj
FAILED: [code=1] CMakeFiles/3sx.dir/src/port/sdl/renderer/sdl_game_renderer_sdl_sw.c.obj 
C:\msys64\mingw64\bin\clang.exe -DDEBUG -DGEKKONET_STATIC -DHAVE_UPNP -DNETPLAY_ENABLED -DRMLUI_SDL_VERSION_MAJOR=3 -DRMLUI_STATIC_LIB -DTARGET_SDL3 -DTRACY_ENABLE -D_POSIX_C_SOURCE=200809L -ID:/3sxtra/src -ID:/3sxtra/src/include -ID:/3sxtra/src/include/sdk -ID:/3sxtra/src/zlib -ID:/3sxtra/third_party/GekkoNet/GekkoLib/include -ID:/3sxtra/third_party/stb -ID:/3sxtra/third_party/librashader/include -ID:/3sxtra/third_party/simde -ID:/3sxtra/third_party/glad/cmake/include -ID:/3sxtra/build/gladsources/glad/include -ID:/3sxtra/third_party/sdl3/SDL/src/video/khronos -ID:/3sxtra/src/port/sdl/app -ID:/3sxtra/src/port/sdl/renderer -ID:/3sxtra/src/port/sdl/input -ID:/3sxtra/src/port/sdl/imgui -ID:/3sxtra/src/port/sdl/netplay -ID:/3sxtra/src/port/sdl/rmlui -ID:/3sxtra/src/port/config -ID:/3sxtra/src/port/save -ID:/3sxtra/src/port/mods -ID:/3sxtra/src/port/rendering -ID:/3sxtra/src/include/port/sdl/app -ID:/3sxtra/src/include/port/sdl/renderer -ID:/3sxtra/src/include/port/sdl/input -ID:/3sxtra/src/include/port/config -ID:/3sxtra/src/include/port/save -ID:/3sxtra/src/include/port/rendering -ID:/3sxtra/third_party/Spout2/SPOUTSDK/SpoutGL -ID:/3sxtra/third_party/imgui -ID:/3sxtra/third_party/imgui/backends -ID:/3sxtra/third_party/rmlui/Backends -ID:/3sxtra/third_party/sdl3/build/include -ID:/3sxtra/third_party/sdl3_image/build/include -ID:/3sxtra/third_party/sdl3_mixer/build/include -ID:/3sxtra/build/gladsources/glad_gl_core/include -ID:/3sxtra/third_party/SDL_shadercross/include -ID:/3sxtra/third_party/rmlui/Include -isystem D:/3sxtra/third_party/lua/src -isystem D:/3sxtra/build/_deps/tracy-src/public -O2 -g -DNDEBUG -std=gnu11 -Wall -Werror -fno-strict-aliasing -Wpointer-to-int-cast -Wno-deprecated-non-prototype -Wno-tautological-overlap-compare -Wno-c2x-extensions -Wno-incompatible-pointer-types -Wno-pointer-sign -Wno-absolute-value -Wno-implicit-function-declaration -mavx2 -mfma -MD -MT CMakeFiles/3sx.dir/src/port/sdl/renderer/sdl_game_renderer_sdl_sw.c.obj -MF CMakeFiles\3sx.dir\src\port\sdl\renderer\sdl_game_renderer_sdl_sw.c.obj.d -o CMakeFiles/3sx.dir/src/port/sdl/renderer/sdl_game_renderer_sdl_sw.c.obj -c D:/3sxtra/src/port/sdl/renderer/sdl_game_renderer_sdl_sw.c
D:/3sxtra/src/port/sdl/renderer/sdl_game_renderer_sdl_sw.c:188:41: error: use of undeclared identifier 'FL_TEXTURE_MAX'
  188 |     if (tex_handle <= 0 || tex_handle > FL_TEXTURE_MAX)
      |                                         ^~~~~~~~~~~~~~
D:/3sxtra/src/port/sdl/renderer/sdl_game_renderer_sdl_sw.c:484:41: error: use of undeclared identifier 'FL_TEXTURE_MAX'
  484 |     if (tex_handle <= 0 || tex_handle > FL_TEXTURE_MAX)
      |                                         ^~~~~~~~~~~~~~
2 errors generated.
[2/10] Linking CXX static library GekkoNet\GekkoLib\libGekkoNet_STATIC.a
[3/10] Linking CXX static library _deps\tracy-build\libTracyClient.a
[4/10] Linking C static library libglad_gl_core.a
[5/10] Building CXX object CMakeFiles/3sx.dir/src/port/sdl/rmlui/lua_engine_bridge.cpp.obj
FAILED: [code=1] CMakeFiles/3sx.dir/src/port/sdl/rmlui/lua_engine_bridge.cpp.obj 
C:\msys64\mingw64\bin\clang++.exe -DDEBUG -DGEKKONET_STATIC -DHAVE_UPNP -DNETPLAY_ENABLED -DRMLUI_SDL_VERSION_MAJOR=3 -DRMLUI_STATIC_LIB -DTARGET_SDL3 -DTRACY_ENABLE -D_POSIX_C_SOURCE=200809L -ID:/3sxtra/src -ID:/3sxtra/src/include -ID:/3sxtra/src/include/sdk -ID:/3sxtra/src/zlib -ID:/3sxtra/third_party/GekkoNet/GekkoLib/include -ID:/3sxtra/third_party/stb -ID:/3sxtra/third_party/librashader/include -ID:/3sxtra/third_party/simde -ID:/3sxtra/third_party/glad/cmake/include -ID:/3sxtra/build/gladsources/glad/include -ID:/3sxtra/third_party/sdl3/SDL/src/video/khronos -ID:/3sxtra/src/port/sdl/app -ID:/3sxtra/src/port/sdl/renderer -ID:/3sxtra/src/port/sdl/input -ID:/3sxtra/src/port/sdl/imgui -ID:/3sxtra/src/port/sdl/netplay -ID:/3sxtra/src/port/sdl/rmlui -ID:/3sxtra/src/port/config -ID:/3sxtra/src/port/save -ID:/3sxtra/src/port/mods -ID:/3sxtra/src/port/rendering -ID:/3sxtra/src/include/port/sdl/app -ID:/3sxtra/src/include/port/sdl/renderer -ID:/3sxtra/src/include/port/sdl/input -ID:/3sxtra/src/include/port/config -ID:/3sxtra/src/include/port/save -ID:/3sxtra/src/include/port/rendering -ID:/3sxtra/third_party/Spout2/SPOUTSDK/SpoutGL -ID:/3sxtra/third_party/imgui -ID:/3sxtra/third_party/imgui/backends -ID:/3sxtra/third_party/rmlui/Backends -ID:/3sxtra/third_party/sdl3/build/include -ID:/3sxtra/third_party/sdl3_image/build/include -ID:/3sxtra/third_party/sdl3_mixer/build/include -ID:/3sxtra/build/gladsources/glad_gl_core/include -ID:/3sxtra/third_party/SDL_shadercross/include -ID:/3sxtra/third_party/rmlui/Include -isystem D:/3sxtra/third_party/lua/src -isystem D:/3sxtra/build/_deps/tracy-src/public -O2 -g -DNDEBUG -Wall -Werror -fno-strict-aliasing -mavx2 -mfma -MD -MT CMakeFiles/3sx.dir/src/port/sdl/rmlui/lua_engine_bridge.cpp.obj -MF CMakeFiles\3sx.dir\src\port\sdl\rmlui\lua_engine_bridge.cpp.obj.d -o CMakeFiles/3sx.dir/src/port/sdl/rmlui/lua_engine_bridge.cpp.obj -c D:/3sxtra/src/port/sdl/rmlui/lua_engine_bridge.cpp
D:/3sxtra/src/port/sdl/rmlui/lua_engine_bridge.cpp:417:5: error: unknown type name 'SDL_RWops_renamed_SDL_IOStream'
  417 |     SDL_RWops* rw = SDL_RWFromFile(path, "rb");
      |     ^
D:/3sxtra/third_party/sdl3/build/include/SDL3/SDL_oldnames.h:1196:19: note: expanded from macro 'SDL_RWops'
 1196 | #define SDL_RWops SDL_RWops_renamed_SDL_IOStream
      |                   ^
D:/3sxtra/src/port/sdl/rmlui/lua_engine_bridge.cpp:417:21: error: use of undeclared identifier 'SDL_RWFromFile_renamed_SDL_IOFromFile'
  417 |     SDL_RWops* rw = SDL_RWFromFile(path, "rb");
      |                     ^~~~~~~~~~~~~~
D:/3sxtra/third_party/sdl3/build/include/SDL3/SDL_oldnames.h:1193:24: note: expanded from macro 'SDL_RWFromFile'
 1193 | #define SDL_RWFromFile SDL_RWFromFile_renamed_SDL_IOFromFile
      |                        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
2 errors generated.
[6/10] Building CXX object CMakeFiles/3sx.dir/third_party/rmlui/Backends/RmlUi_Renderer_GL3.cpp.obj
[7/10] Linking CXX shared library SDL_shadercross\external\SPIRV-Cross\libspirv-cross-c-shared.dll
ninja: build stopped: subcommand failed.

[91m[X] Build failed with exit code: 1[0m
